--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -12,3 +12,10 @@ $spacer-unit: 1rem;
 .is-hidden {
     display: none;
 }
+
+.icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+}
