--- a/sass/_svg-menu.scss
+++ b/sass/_svg-menu.scss
@@ -32,7 +32,7 @@
         .with-enharmonic {
             font-size: 2em;
             
-            text.flat-sharp {
+            .flat, .sharp {
                 font-size: 60%;
             }
         }
