--- a/sass/_instrument-selector.scss
+++ b/sass/_instrument-selector.scss
@@ -1,40 +1,68 @@
-.instrument {
-    @include span-columns(4);
+$selector-size: 21em;
+$selector-margin: $selector-size / 2;
+$border-color: lighten($info, 20%);
+
+.instrument-selector {
+    position: absolute;
+    top: 10em;
+    left: 50%;
+    z-index: 100;
+    overflow: hidden;
+    margin-left: (-$selector-margin);   
+    padding: spacer(.5);
+    width: $selector-size;
+    height: $selector-size;
+    border: 1px solid $border-color;
+    background-color: transparentize(white, .05);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    text-align: center;
     
     @include media($mobile) {
-        @include span-columns(12);
-        margin-bottom: spacer(.5);
+        top: 5em;
     }
-    
-    select {
-        margin-top: spacer(1);
+}
 
-        @include media($mobile) {
-            margin-top: spacer(.5);;            
-        }    
+.instrument-list {
+    overflow: auto;
+    margin: spacer(.5) .425rem;
+    z-index: 999;
+    
+    input {
+        position: absolute;
+        margin: -999em;
     }
     
-    &-selection {
-        overflow: auto;
-        margin-bottom: spacer(2);
-    }
-    
-    .arrow-container {
-        font-size: 3em;            
-        color: $info;
-    }
-       
-    .icon-arrow-right {
-        @include media($mobile) {
-            display: none;
-        }
-    }
-
-    .icon-arrow-down {
-        display: none;
+    li {
+        display: inline-block;
+        float: left;
+        width: 5rem;
+        height: 5rem;
+        border-right: 1px solid $border-color;
+        border-bottom: 1px solid $border-color;
         
-        @include media($mobile) {
-            display: inline-block;
+        &:nth-of-type(4n) {
+            border-right: 0;
         }
     }
+    
+    label {
+        display: block;
+        padding: spacer(.5);
+        width: 100%;
+        height: 5rem;
+        color: $default;
+        text-align: center;
+        font-size: .75em;
+        cursor: pointer;       
+    }
+
+    input:checked + label {
+        background-color: transparentize($secondary, .7);
+    }
+    
+    .icon {
+        display: block;
+        margin: 0 auto spacer(.5);
+        font-size: 3em;
+    } 
 }
