--- a/sass/_answers.scss
+++ b/sass/_answers.scss
@@ -1,6 +1,6 @@
 .answer-container {
     margin: spacer(2) auto;
-    width: 60%;
+    max-width: 16em;
     font-size: 2em;
     line-height: 1.25;
     
