Add more icons.

--- a/css/transpose.css
+++ b/css/transpose.css
@@ -340,7 +340,7 @@ h2 {
   margin-left: -10.5em;
   padding: 0.5rem;
   width: 21em;
-  height: 21em;
+  height: 22em;
   border: 1px solid #ccd0d4;
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -361,10 +361,13 @@ h2 {
     float: left;
     width: 5rem;
     height: 5rem;
-    border-right: 1px solid #ccd0d4;
-    border-bottom: 1px solid #ccd0d4; }
-    .instrument-list li:nth-of-type(4n) {
+    border-bottom: 1px solid #ccd0d4;
+    border-right: 1px solid #ccd0d4; }
+    .instrument-list li:nth-child(4n) {
+      border-bottom: 1px solid #ccd0d4;
       border-right: 0; }
+    .instrument-list li:nth-last-of-type(-n+4) {
+      border-bottom: 0; }
   .instrument-list label {
     display: block;
     padding: 0.5rem;
