--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-@use "sass:color";
+@use 'sass:color';
 
 $primary: #ff951e;
 $secondary: #007fb2;
@@ -7,6 +7,7 @@ $warning: #ffca4c;
 $success: #39ea28;
 $default: #3a3b3d;
 $info: #959ea5;
+$white: #fff;
 $black: color.adjust($default, $lightness: -10%);
 $link-hover: color.adjust($secondary, $lightness: -20%);
 $spacer-unit: 1rem;
@@ -19,8 +20,11 @@ $border-width: 0.0625rem;
 @function spacer($value) {
   @if ($value * 4) % 1 != 0 {
     @warn Spacer value must be a multiple of 0.5;
+
     @return Spacer value must be a multiple of 0.5;
-  } @else {
+  }
+
+  @else {
     @return $spacer-unit * $value;
   }
 }
